# dmnn.wator

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
include/: wator.hpp
include/wator/: blob.hpp  debug.hpp  layer.hpp  layer_cortex.hpp  layer_coulomb.hpp  layer_einstein.hpp  layer_ganglion.hpp  layer_image.hpp  layer_leibniz.hpp  layer_newton.hpp  layer_object.hpp  layer_polarizer.hpp  layer_v1_cortex.hpp  layer_v2_cortex.hpp  layer_v3_cortex.hpp  layer_v4_cortex.hpp  memory_explicit.hpp  memory_implicit.hpp  net.hpp
src/: CMakeLists.txt  blob.cpp  layer.cpp  layer_cortex.cpp  layer_coulomb.cpp  layer_einstein.cpp  layer_ganglion.cpp  layer_image.cpp  layer_leibniz.cpp  layer_newton.cpp  layer_object.cpp  layer_polarizer.cpp  layer_v1_cortex.cpp  layer_v2_cortex.cpp  layer_v3_cortex.cpp  layer_v4_cortex.cpp  memory_explicit.cpp  memory_implicit.cpp  net.cpp
test/: CMakeLists.txt  main.cpp  net.cpp
tools/: CMakeLists.txt  shotThough.cpp  wator.cpp
